[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fracdiff"
version = "1.0.0"
authors = [
    { name="Reis McMillan", email="reismcmillan19@gmail.com" }
]
description = "Super-fast fractional differentiation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "BSD-3-Clause"}
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "statsmodels >= 0.13.0"
]

[project.optional-dependencies]
sklearn = ["scikit-learn"]
torch = ["torch"]

[project.urls]
repository = "https://github.com/Reis-McMillan/fracdiff"